apps/base/govee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: govee2mqtt
  namespace: hass-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: govee2mqtt
  template:
    metadata:
      labels:
        app: govee2mqtt
    spec:
      containers:
        - name: govee2mqtt
          image: ghcr.io/wez/govee2mqtt:latest
          ports:
            - containerPort: 8080
              name: http
