apps/base/govee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: govee2mqtt
  namespace: hass-system
spec:
  selector:
    app: govee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: 8080
